--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Carbon Footprint AI</title>
   <link rel="stylesheet" href="/static/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -56,6 +57,7 @@
   </div>
 
   <div class="result" id="result"></div>
+  <canvas id="carbonChart" width="400" height="400"></canvas>
 
   <script src="/static/script.js"></script>
 </body>
