added background image

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Carbon Footprint AI</title>
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="static/style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -57,8 +57,9 @@
   </div>
 
   <div class="result" id="result"></div>
-  <canvas id="carbonChart" width="400" height="400"></canvas>
-
+  <div style="width: 300px; height: 300px; margin: auto;">
+    <canvas id="carbonChart" width="300" height="300"></canvas>
+  </div>  
   <script src="/static/script.js"></script>
 </body>
 </html>
